# pet-info

./: .gitignore  CERTIFICATE_RENEWAL.md  Makefile  README.md  TYPST_IMAGE_GENERATION.md  WALLET_PASS_NOTIFICATIONS_PLAN.md  WHATSAPP_WEBHOOK_SECURITY.md
certs/: README.md
docker/: ec2.Dockerfile  lambda_build.Dockerfile
migrations/: add_reminder_repeat.sql  create_tables.sql
scripts/: Cargo.toml  README.md  diagnose-tls.sh  renew-certs.sh  test-tls-verbose.sh
scripts/src/: action.rs  config.rs  main.rs  utils.rs
systemd/: README.md  certbot-renewal.service  certbot-renewal.timer  pet-info.service  pet-info.service.example
terraform/: README.md  main.tf  providers.tf  variables.tf
terraform/lambda_package/send-reminders/: Cargo.toml  README.md
terraform/lambda_package/send-reminders/src/: config.rs  handler.rs  main.rs
terraform/modules/cloudfront/: main.tf  outputs.tf  variables.tf
terraform/modules/domain/: main.tf  outputs.tf  variables.tf
terraform/modules/ec2/: main.tf  variables.tf
terraform/modules/ec2/files/: nginx-pet-info.conf
terraform/modules/ec2/user_data/: pet_info_start.sh
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/role/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/ssm/: main.tf  variables.tf
terraform/modules/step_function/: main.tf  outputs.tf  variables.tf
web_app/: Cargo.toml
web_app/src/: cert_watcher.rs  config.rs  consts.rs  logger.rs  main.rs  metric.rs  qr.rs  sample.rs  utils.rs
web_app/src/api/: mod.rs  passes.rs  payment.rs  pdf_handler.rs  pet.rs  reminder.rs  user.rs
web_app/src/front/: auth.rs  blog.rs  checkout.rs  errors.rs  internal_api.rs  mod.rs  oauth.rs  pet.rs  pet_health.rs  pet_note.rs  pet_public.rs  profile.rs  reminder.rs  routes.rs  server.rs  session.rs  templates.rs  utils.rs  webhook.rs
web_app/src/front/forms/: mod.rs  payment.rs  pet.rs  user.rs
web_app/src/front/middleware/: csrf_token.rs  logged_user.rs  mod.rs
web_app/src/front/webhook/: mod.rs  whatsapp.rs
web_app/src/models/: mod.rs  mp_paym.rs  payment.rs  pet.rs  reminder.rs  user_app.rs
web_app/src/repo/: mod.rs  sqlite.rs  sqlite_queries.rs
web_app/src/services/: mod.rs  notification.rs  storage.rs
web_app/src/webhook/: mod.rs  routes.rs
web_app/src/webhook/whatsapp/: client.rs  handler.rs  mod.rs  outgoing_schemas.rs  routes.rs  schemas.rs  security.rs
web_app/src/webhook/whatsapp/schemas/: in.rs  mod.rs  outgoing.rs
web_app/web/blog/: about.md  privacy.md  questions.md  terms.md
web_app/web/reports/: pet_default.typ  pet_public_info.typ
web_app/web/static/css/: cropper.min.css  custom.css  landing.css  pico.colors.min.css  pico.min.css  toggle_theme.css
web_app/web/static/images/: dog_hi.riv
web_app/web/static/js/: cropper.min.js  heic2any.min.js  htmx.min.js  loading.js  minimal-theme-switcher.js  quill.js  response-targets.js  sw.js
web_app/web/templates/: account_data_deleted.html  base.html  blog.html  checkout.html  health_record.html  index.html  pet.html  pet_details.html  pet_empty_tag.html  pet_note.html  pet_public_info.html  profile.html  reactivate_account.html  reminders.html  site.webmanifest
web_app/web/templates/errors/: internal_error.html  invalid_input_values.html  need_login.html  need_subscription.html  url_not_found.html  widget_page_err.html
web_app/web/templates/widgets/: add_pet_form.html  btn_open_modal.html  otp.html  otp_verification.html  owner_contact_list.html  pet_notes.html  pets.html  tbody_health_record.html  tbody_reminder.html  trash_icon.html
