[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
tera = { version = "1.20.0", default-features = false, features = [ "builtins" ]}
# i am pinning libsqlite3-sys and sqlx due sqlx can use a dif version
libsqlite3-sys = { version = "=0.30.1", optional = false, default-features = false, features = [
     "bundled-sqlcipher"
] }
sqlx = { version = "=0.8.3", default-features = false, features = [ "runtime-tokio", "tls-native-tls" , "sqlite", "derive", "chrono", "uuid"] }
anyhow = "1.0.97"
envconfig = "0.11.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
