[package]
name = "pet-info"
version = "0.1.0"
edition = "2024"

[dependencies]
# Front Web dependencies:
ntex = { version = "2.12.4", features = [ "tokio", "compress", "openssl" ] }
ntex-files = "2.0.0"
ntex-multipart = "2.0.0"
ntex-identity = "2.0.0"
ntex-session = { version = "2.0.0", features = [] }
tera = { version = "1.20.0", default-features = false, features = [ "builtins" ]}
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"]}
fast_qr = { version = "0.12.7", features = ["image"]}
image = { version = "0.25.5"}
pulldown-cmark = "0.12.2"
ammonia = "4.1.0"
totp-rs = "5.7.0"
openssl = { version = "0.10", features = ["vendored"] }

ntex-cors = "2.0.0"
typst = "0.13.1"
typst-pdf = "0.13.1"
typst-assets = { version = "0.13.1", features = ["fonts"] }

# General deps all app
# i am pinning libsqlite3-sys and sqlx due sqlx cant use a dif version
libsqlite3-sys = { version = "=0.30.1", optional = false, default-features = false, features = [
     "bundled-sqlcipher"
] }
sqlx = { version = "=0.8.6", default-features = false, features = [ "runtime-tokio", "tls-native-tls" , "sqlite", "derive", "chrono", "uuid"] }
csrf = "0.5.0"
argon2 = "0.5.3"
reqwest = { version = "0.12.19", features = ["json"] }
rust_decimal = { version = "1.37",  features = ["serde-with-float"] }
rust_decimal_macros = "1.37"
envconfig = "0.11.0"

# Tools app
derive_more = { version = "2.0.1", features = ["display", "error"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = [ "v4", "serde" ] }
chrono = { version = "0.4.41", features = [ "serde" ] }
async-trait = "0.1.88"
anyhow = "1.0.98"
base64 = "0.22.1"
futures = "0.3.31"
simplelog = "0.12.2"
log = "0.4.27"
aws-config = { version = "1.6.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.91.0"
aws-sdk-sfn = "1.76.0"
chrono-tz = "0.10.3"

