[package]
name = "pet-info"
version = "0.1.0"
edition = "2024"

[features]
default = []
ssm = ["aws-sdk-ssm"]

[dependencies]
# Front Web dependencies:
ntex = { version = "2.16.0", features = [ "tokio", "compress", "openssl" ] }
ntex-files = "2.1.0"
ntex-multipart = "2.0.0"
ntex-identity = "2.0.0"
ntex-session = { version = "2.0.0", features = [] }
tera = { version = "1.20.1", default-features = false, features = [ "builtins", "date-locale" ]}
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"]}
fast_qr = { version = "0.12.7", features = ["image"]}
# pinning image cause fast_qr is using a specific version
image = { version = "=0.25.5"}
pulldown-cmark = "0.12.2"
ammonia = "4.1.2"
totp-rs = "5.7.0"
openssl = { version = "0.10", features = ["vendored"] }
passes = "1.0.1"
html2text = "0.15.5"
ntex-cors = "2.1.0"
typst = "0.13.1"
typst-pdf = "0.13.1"
typst-assets = { version = "0.13.1", features = ["fonts"] }

# General deps all app
# i am pinning libsqlite3-sys and sqlx due sqlx cant use a dif version
libsqlite3-sys = { version = "=0.30.1", optional = false, default-features = false, features = [
     "bundled-sqlcipher"
] }
sqlx = { version = "=0.8.6", default-features = false, features = [ "runtime-tokio", "tls-native-tls" , "sqlite", "derive", "chrono", "uuid"] }
csrf = "0.5.0"
argon2 = "0.5.3"
reqwest = { version = "0.12.24", features = ["json"] }
rust_decimal = { version = "1.39",  features = ["serde-with-float"] }
rust_decimal_macros = "1.39"
envconfig = "0.11.0"
# Logfire to instrument Rust code.
logfire = "0.5.0"
tracing = "0.1.41"
opentelemetry = "0.29.1"

# Tools app
derive_more = { version = "2.0.1", features = ["display", "error"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = [ "v4", "serde" ] }
chrono = { version = "0.4.42", features = [ "serde" ] }
async-trait = "0.1.89"
anyhow = "1.0.100"
base64 = "0.22.1"
futures = "0.3.31"
simplelog = "0.12.2"
log = "0.4.28"
tokio = { version = "1.48", features = ["sync"] }
chrono-tz = "0.10.4"

# aws
aws-config = { version = "1.8.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.110.0"
aws-sdk-ssm = { version = "1.98.0", optional = true }
aws-sdk-sfn = "1.92.0"

[dev-dependencies]
mockall = "0.13.1"
