[package]
name = "send-reminders"
version = "0.1.0"
edition = "2021"

[dependencies]

lambda_runtime = "0.13.0"
serde = "1"
serde_json = "1.0.140"
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
envconfig = "0.11.0"
simple-error = "0.2.3"
openssl = { version = "0.10", features = ["vendored"] }


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
